<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/title" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@id/textView1"
        android:ems="10"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText1"
        android:layout_below="@id/editText1"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/note" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textview2"
        android:layout_below="@id/textview2"
        android:inputType="textMultiLine"
        android:ems="10" 
        android:imeOptions="normal"/>
    
   
    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/editText1"
        android:layout_below="@id/editText2"
        android:layout_marginTop="15dp"
		android:textSize="16sp"
		android:textStyle="bold"
        android:text="@string/location" />
   
<RadioGroup 
    android:id="@+id/radio_group"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/textview3"
    android:orientation="vertical"
    android:layout_marginLeft="20dp">
    <RadioButton android:id="@+id/radio_favs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favs"
        android:onClick="onRadioButtonClicked"/>
    <RadioButton android:id="@+id/radio_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maps"
        android:onClick="onRadioButtonClicked"/>
</RadioGroup>
    

    <TextView 
        android:id="@+id/loc_alias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:textSize="20sp"
        android:layout_alignLeft="@id/editText2"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
		android:visibility="gone"
		 />
    
    <Button 
        android:id="@+id/loc_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_marginLeft="200dp"
        android:layout_alignTop="@id/loc_alias"
        android:text="@string/change"
        android:onClick="locChangeBut"
        android:visibility="gone"
        />

	<TextView
        android:id="@+id/textViewOcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loc_change"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/occ_label" />
     
	<RadioGroup 
	    android:id="@+id/radioGroup1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/textViewOcc"
	    android:orientation="horizontal"
	    >
     <RadioButton
           android:id="@+id/radioButtonOnce"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/radio_once"
           android:onClick="radioChanged"
            />
     
     <RadioButton
           android:id="@+id/radioButtonEveryday"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/radio_everyday"
           android:onClick="radioChanged"
            />
     </RadioGroup>
     
        <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup1"
        android:text="@string/date_label"
        android:textStyle="bold"
        android:textSize="16sp"
        android:visibility="gone"
         />
    
    <EditText 
        android:id="@+id/editTextDate"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDate"
        android:onClick="showDatePickerDialog"
        android:visibility="gone"
        />


	  <Button 
        android:id="@+id/button1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/editText1"
        android:layout_below="@id/editTextDate"
        android:layout_marginTop="30dp"
        android:text="@string/done"
        android:padding="2sp"
        android:background="#222222"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="enterDetails"
        />
</RelativeLayout>
</ScrollView>