<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RemiDetailsActivity"
     >

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remiDetails"
        android:textSize="35sp" 
        android:textStyle="bold"
        android:textColor="@color/myBlue"
	/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/type"
        android:background="@color/myBlue"
	/>
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:text="@string/remiDetailsTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/myBlue"
        />
   				 <TextView 
			        android:id="@+id/title_in"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/title"
			        android:layout_marginLeft="30dp"
			        android:textSize="18sp"
			        android:text="@string/remiDetailsTitle"
			        />
   		 <TextView 
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_in"
		android:paddingTop="20dp"
        android:text="@string/remiDetailsNote"
        android:textColor="@color/myBlue"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    
   		 		 <TextView 
			        android:id="@+id/note_in"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/note"
			        android:layout_marginLeft="30dp"
			        android:textSize="18sp"
			        android:text="@string/remiDetailsNote"
					/><TextView 
        android:id="@+id/loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_in"
        android:paddingTop="20dp"
        android:text="@string/remiDetailsLoc"
        android:textColor="@color/myBlue"
        android:textSize="20sp"
        android:textStyle="bold"
        
        />
  		 <TextView 
			        android:id="@+id/loc_in"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/loc"
			        android:layout_marginLeft="30dp"
			        android:textSize="18sp"
			        android:text="@string/remiDetailsLoc"
		
			        />  
    
 	<TextView 
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loc_in"
        android:paddingTop="20dp"
        android:text="@string/occ_label"
        android:textColor="@color/myBlue"
        android:textStyle="bold"
        android:textSize="20sp"
        
        />
  	 			 <TextView 
			        android:id="@+id/day_in"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/day"
			        android:layout_marginLeft="30dp"
			        android:textSize="18sp"
			        android:text="@string/radio_everyday"
			        />  
	
	<Button 
        android:id="@+id/delbut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_in"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/delButtonText"
        android:textColor="#ffffff"
        android:background="@color/myBlue"
        android:onClick="delremi"
        android:textStyle="bold"
        android:textSize="20sp"
        />
	
	<Button 
        android:id="@+id/snoozeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/day_in"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/snooze"
        android:textColor="#ffffff"
        android:background="@color/myBlue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="onSnooze"
        />
	<Button 
        android:id="@+id/dismissb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/snoozeb"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:text="@string/dismiss"
        android:textColor="#ffffff"
        android:background="@color/myBlue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="onDismiss"
        />
 
</RelativeLayout>
</ScrollView>
